tests/fail/type8.rx
/*
Test Package: Semantic-1
Test Target: type
Author: Wenxin Zheng
Time: 2025-08-08
Verdict: Fail
Comment: Type error: boolean type cannot be compared with integer
*/

// Type error: boolean type cannot be compared with integer
fn main() {
    let bool_val: bool = true;
    if (bool_val == 42) {
        printInt(1);
    }
    exit(0);
}
